INCLUDE_DIRECTORIES(../libs/slutils)

SET(SEEDLINK_PLUGIN_OUTPUT_DIR ${SC3_PACKAGE_SHARE_DIR}/plugins/seedlink)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
INSTALL(FILES plugin.py DESTINATION ${SEEDLINK_PLUGIN_OUTPUT_DIR})

SUBDIRS(chain_plugin)
