SET(CHAINPLUGIN_SOURCES
	chain4_plugin.cc
	schedule.c
)

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
INCLUDE_DIRECTORIES(../../libs/plugin)
INCLUDE_DIRECTORIES(../../libs/3rd-party/libslink4)
INCLUDE_DIRECTORIES(../../../../system/libs/3rd-party/libmseed)

SET(OPTIONS "-DSYSLOG_FACILITY=LOG_LOCAL0")

ADD_DEFINITIONS(${OPTIONS})
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

ADD_EXECUTABLE(chain4_plugin ${CHAINPLUGIN_SOURCES})

TARGET_LINK_LIBRARIES(
	chain4_plugin
		slink4
		mseed
		slplugin
		slutils
		${LIBXML2_LIBRARIES}
)

INSTALL(TARGETS chain4_plugin RUNTIME DESTINATION ${SEEDLINK_PLUGIN_OUTPUT_DIR})

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
